9 May 2007: Wouter
	- outside network cleans up waiting tcp queries on exit.
	- fallback to TCP.
	- testbound replay with retry in TCP mode.
	- tpkg test for retry in TCP mode, against ldns-testns server.

8 May 2007: Wouter
	- outgoing network keeps list of available tcp buffers for outgoing 
	  tcp queries.
	- outgoing-num-tcp config option.
	- outgoing network keeps waiting list of queries waiting for buffer.
	- netevent supports outgoing tcp commpoints, nonblocking connects.

7 May 2007: Wouter
	- EDNS read from query, used to make reply smaller.
	- advertised edns value constants.
	- EDNS BADVERS response, if asked for too high edns version.
	- EDNS extended error reponses once the EDNS record from the query
	  has successfully been parsed.

4 May 2007: Wouter
	- msgreply sizefunc is more accurate.
	- config settings for rrset cache size and slabs.
	- hashtable insert takes argument so that a thread can use its own
	  alloc cache to store released keys.
	- alloc cache special_release() locks if necessary.
	- rrset trustworthiness type added.
	- thread keeps a scratchpad region for handling messages.
	- writev used in netevent to write tcp length and data after another.
	  This saves a roundtrip on tcp replies.
	- test for one rrset updated in the cache.
	- test for one rrset which is not updated, as it is not deemed
	  trustworthy enough.
	- test for TTL refreshed in rrset.

3 May 2007: Wouter
	- fill refs. Use new parse and encode to answer queries.
	- stores rrsets in cache.
	- uses new msgreply format in cache.

2 May 2007: Wouter
	- dname unit tests in own file and spread out neatly in functions.
	- more dname unit tests.
	- message encoding creates truncated TC flagged messages if they do 
	  not fit, and will leave out (whole)rrsets from additional if needed.

1 May 2007: Wouter
	- decompress query section, extremely lenient acceptance.
	  But only for answers from other servers, not for plain queries.
	- compression and decompression test cases.